testing/framework/resources/Advanced/Failing/mondrian/query2516.q
select  * from  (select  time_by_day.the_year as c0,  time_by_day.quarter as c1,  time_by_day.month_of_year as c2,  store.store_country as c3 from  time_by_day as time_by_day,  sales_fact_1997 as sales_fact_1997,  store as store,  product_class as product_class,  product as product where  sales_fact_1997.time_id = time_by_day.time_id and  sales_fact_1997.store_id = store.store_id and  sales_fact_1997.product_id = product.product_id and  product.product_class_id = product_class.product_class_id and  product_class.product_family = 'Food' and  (store.store_country = 'USA') group by  time_by_day.the_year,  time_by_day.quarter,  time_by_day.month_of_year,  store.store_country union select  time_by_day.the_year as c0,  time_by_day.quarter as c1,  time_by_day.month_of_year as c2,  store.store_country as c3 from  time_by_day as time_by_day,  inventory_fact_1997 as inventory_fact_1997,  store as store,  product_class as product_class,  product as product where  inventory_fact_1997.time_id = time_by_day.time_id and  inventory_fact_1997.store_id = store.store_id and  inventory_fact_1997.product_id = product.product_id and  product.product_class_id = product_class.product_class_id and  product_class.product_family = 'Food' and  (store.store_country = 'USA') group by  time_by_day.the_year,  time_by_day.quarter,  time_by_day.month_of_year,  store.store_country) as unionQuery order by  1 ASC NULLS LAST,  2 ASC NULLS LAST,  3 ASC NULLS LAST,  4 ASC NULLS LAST;
